<resources>
    <string name="app_name">Recoveryfy</string>
    <string name="loans_recovery_agency">Loans Recovery Agency</string>
    <string name="recoveryfy">Recoveryfy</string>
    <string name="we_ve_missed_you_sign_in_to_continue">We’ve missed you! Sign in to\ncontinue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="need_user">Need user? </string>
    <string name="sign_up">Sign up</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="forgot_password_header">Enter email Address register with your \naccount.</string>
    <string name="submit">Submit</string>
    <string name="menu_home">Home</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="_1m_ago">1m ago</string>
    <string name="app_version">App Version 1.0</string>
    <string name="search_by_chassis_number_engine_number_amp_registration_number"><![CDATA[Search by Chassis Number, Engine Number & Registration Number]]></string>
    <string name="view">View</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn’t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="otp_hint">*</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="vehicle_summary">Vehicle Summary</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="verify">Verify</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="no_notification">No Notification</string>
    <string name="when_you_will_have_notification_you_ll_see_here">When you will have notification you’ll see here</string>
    <string name="address">ADDRESS</string>
    <string name="address_cap">Address</string>
    <string name="agency_name">AGENCY NAME</string>
    <string name="log_out">Log out</string>
    <string name="search_results">Search Results</string>
    <string name="search_by_chassis_number_engine_number_registration_number"><![CDATA[Search by Chassis Number, Engine Number & Registration Number]]></string>
    <string name="recently_viewed">Recently VIEWED</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="whoops_this_information_not_available_for_a_moment">Whoops… this information not available for a moment</string>
    <string name="basic_info">Basic Info</string>
    <string name="first_name">First Name</string>
    <string name="star">*</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="update_profile">Update Profile</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="edit">Edit</string>
    <string name="vehicle_details">VEHICLE DETAILS</string>
    <string name="registration_no">Registration No.</string>
    <string name="action_history">Action History</string>
    <string name="chassis_no">Chassis No.</string>
    <string name="n_a">N/A</string>
    <string name="engine_no">Engine No.</string>
    <string name="model">Model</string>
    <string name="customer_name">Customer Name</string>
    <string name="stage">Stage</string>
    <string name="emi">EMI</string>
    <string name="loan_number">Loan Number</string>
    <string name="pos">POS</string>
    <string name="bucket">Bucket</string>
    <string name="branch">Branch</string>
    <string name="view_less"><u>View Less</u></string>
    <string name="view_file"><u>View File</u></string>
    <string name="view_more"><u>View More</u></string>
    <string name="id">Id</string>
    <string name="user_name">User Name</string>
    <string name="user_code">User Code</string>
    <string name="hold">Hold</string>
    <string name="edit_date">Edit Date</string>
    <string name="attach_file">Attach File</string>
    <string name="save">Save</string>
    <string name="upload_file">Upload File</string>
    <string name="file_supported_png_jpg_pdf"><![CDATA[(File Supported : Png, jpg & pdf)]]></string>
    <string name="choose_file">Choose File</string>
    <string name="remark">Remark</string>
    <string name="make">Make</string>
    <string name="pending">Pending</string>
    <string name="closed">Closed</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="apply">Apply</string>
    <string name="clear_filter">Clear Filter</string>
</resources>