<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNotificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/menu_notification"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            app:layout_constraintBottom_toTopOf="@id/rvNotification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noNotificationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotificationTitle">

            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/no_notification_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotification"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/no_notification"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notificationIcon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotificationDes"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/when_you_will_have_notification_you_ll_see_here"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNotification" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNotificationTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>