<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:orientation="vertical">

        <include
            android:id="@+id/actionBar"
            layout="@layout/actionbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_16"
                android:paddingTop="@dimen/margin_login_top"
                tools:context=".auth.AuthenticationActivity">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_40"
                    android:background="@drawable/rounded_corner_background"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_address"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintBottom_toTopOf="@id/btnSubmit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHeader" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/forgot_password_header"
                    android:textColor="@color/rf_text_gray5"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintBottom_toTopOf="@id/etEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_28"
                    android:backgroundTint="@color/rf_btn_red"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    app:cornerRadius="@dimen/rounded_corner_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etEmailAddress" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

    <data>

        <variable
            name="viewModel"
            type="com.adciasis.recoveryfy.auth.ForgotPasswordViewModel" />
    </data>
</layout>