<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:orientation="vertical">

        <include
            android:id="@+id/actionBar"
            layout="@layout/actionbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_16"
                android:paddingTop="@dimen/margin_login_top"
                tools:context=".auth.AuthenticationActivity">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:background="@drawable/rounded_corner_background"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/enter_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_34"
                    android:background="@drawable/rounded_corner_background"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirm_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etNewPassword" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_40"
                    android:backgroundTint="@color/rf_btn_red"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    app:cornerRadius="@dimen/rounded_corner_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

    <data>

        <variable
            name="viewModel"
            type="com.adciasis.recoveryfy.auth.PasswordResetViewModel" />
    </data>
</layout>